--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,8 @@
     --dark: #2e2f42;
     /* Pressed state */
     --pressed-state: #404bbf;
+    --hero-bg: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7))
 }
 
 p,h1,h2,h3,h4,h5,h6 {
@@ -160,7 +162,12 @@ a {
 /* HERO */
 
 .hero-section {
+    width: 1440px;
     background-color: var(--primary-text-color);
+    background-image: var(--hero-bg), url(../images/hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
     margin: 0 auto;
