--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a {
 .hero-section {
     width: 1440px;
     background-color: var(--primary-text-color);
-    background-image: var(--hero-bg), url(../images/hero-bg.jpg);
+    background-image: var(--hero-bg), url(../images/hero-img1.jpg);
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: cover;
@@ -314,6 +314,30 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+    margin-bottom: 8px;
+}
+.team-soc-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px ;
+}
+
+.team-soc-item {
+    width: 44px;
+    height: 44px;
+}
+
+.team-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--button-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.team-soc-icon {
+    fill: ;
 }
 
 
