--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ a {
     padding-right: 15px;
     padding-left: 15px;
     margin: 0 auto;
-    /* outline: 2px solid red; */
+    outline: 2px solid red; 
 }
 /* HEADER */
 .header {
@@ -323,11 +323,11 @@ a {
 }
 
 .team-soc-item {
-    width: 44px;
-    height: 44px;
+    width: 40px;
+    height: 40px;
 }
 
-.team-link {
+.team-soc-link {
     width: 100%;
     height: 100%;
     border-radius: 50%;
