--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,9 @@ a {
 .team-soc-icon {
     fill: var(--light);
 }
-
+.team-soc-link:hover {
+    background-color: var(--pressed-state);
+}
 
 /* SECTION BUTTON META*/
 .meta-section {
@@ -432,6 +434,30 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+}
+/* CUSTOMERS */
+
+.client {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.client-titl {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+margin-bottom: 72px;
+}
+.client-soc-list {
+}
+
+.client-soc-item {
+}
+.client-soc-link {
 }
 
 /* FOOTER */
