--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,10 @@
     /* Pressed state */
     --pressed-state: #404bbf;
     --hero-bg: linear-gradient(rgba(46, 47, 66, 0.7),
-            rgba(46, 47, 66, 0.7))
+            rgba(46, 47, 66, 0.7));
+    /* BORDER CLIENT */
+    --client: rgba(142, 143, 153, 1);
+
 }
 
 p,h1,h2,h3,h4,h5,h6 {
@@ -220,6 +223,26 @@ a {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+.feature-soc-list {
+    background-color: var(--light);
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+}
+.feature-soc-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+.feature-soc-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.feature-soc-icon {
+}
 .feature-list {
     display: flex;
     margin-right: auto;
@@ -339,7 +362,8 @@ a {
 .team-soc-icon {
     fill: var(--light);
 }
-.team-soc-link:hover {
+.team-soc-link:hover, 
+.team-soc-link:focus {
     background-color: var(--pressed-state);
 }
 
@@ -438,6 +462,7 @@ a {
 /* CUSTOMERS */
 
 .client {
+    background-color: var(--light);
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -452,12 +477,39 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 margin-bottom: 72px;
 }
+.client-aside {
+
+}
 .client-soc-list {
+display: flex;
+justify-content: center;
+gap: 24px;
 }
 
 .client-soc-item {
+    width: 168px;
+    height: 88px;
 }
 .client-soc-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--client);
+    border-radius: 4px;
+}
+.client-soc-link:hover,
+.client-soc-link:focus {
+    border: 1px solid var(--pressed-state);
+}
+
+.client-soc-icon {
+    fill: var(--subtle-text);
+}
+.client-soc-icon:hover,
+.client-soc-icon:focus {
+    fill: var(--pressed-state);
 }
 
 /* FOOTER */
