--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,8 @@
             rgba(46, 47, 66, 0.7));
     /* BORDER CLIENT */
     --client: rgba(142, 143, 153, 1);
-
+    /* footer-hover */
+    --green: #31D0AA;
 }
 
 p,h1,h2,h3,h4,h5,h6 {
@@ -594,6 +595,10 @@ margin-left: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+    background-color: var(--green);
 }
 
 
