--- a/css/styles.css
+++ b/css/styles.css
@@ -243,8 +243,8 @@ a {
     margin-bottom: 8px;
 }
 .feature-icon {
-    width: 100%;
-    height: 100%;
+    width: 64px;
+    height: 64px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -409,19 +409,18 @@ a {
     color: var(--button-color);
     background-color: var(--light);
     display: block;
-    border: 1px solid transparent;
+    border: 1px solid var(--accent);
     border-radius: 4px;
     padding: 12px 24px;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
 } 
 
 .btn:hover,
 .btn:focus {
-    background-color: rgba(64, 75, 191, 1);
+    background-color: var(--pressed-state);
     color: var(--white-background);
-    
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .list {
     list-style: none;
@@ -447,16 +446,16 @@ a {
 .work-link:hover,
 .work-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
-/* .work-aside {
-    border: 1px solid var(--accent);
-    border-top: none;
-    padding: 32px 16px;
+.work-aside {
+padding: 0px 16px;
+gap: 8px;
+padding-top: 32px;
+padding-bottom: 32px;
+border: 1px solid var(--accent);
 }
-.work-aside:hover,
-.work-aside:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-} */
+
 
 .title-link {
     font-weight: 500;
@@ -466,13 +465,7 @@ a {
     color: var(--primary-text-color);
     margin-bottom: 8px;
 }
-.work-link {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--primary-text-color);
-}
+
 .subtitle-link {
     font-size: 16px;
     line-height: 1.5;
@@ -482,7 +475,7 @@ a {
 /* CUSTOMERS */
 
 .client {
-    background-color: var(--light);
+    background-color: var(--modal-backgraund);
     padding-top: 120px;
     padding-bottom: 120px;
 }
